# tests_mobile

./: README.md  pyproject.toml
tests/: conftest.py  test_mobile.py
utils/: attach.py
